<resources>
    <string name="app_name">Udacity Downloader</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Udacity Dowloader</string>
    <string name="contentDescriptionDownloadImage">Download image</string>
    <string name="colorButton">#0085CC</string>
    <string name="colorText">#F9A825</string>
    <string name="radioText">Repository</string>
    <string name="status">Status:</string>
    <string name="fileName">File</string>
    <string name="textRetrofit">Retrofit</string>
    <string name="okay_button">Okay</string>
    <string name="textProject3">Udacity Project 3</string>
    <string name="textGlide">Glide</string>
    <string name="textPytorch">Pytorch</string>
</resources>
