<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textGlide" />

            <RadioButton
                android:id="@+id/project3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textProject3" />

            <RadioButton
                android:id="@+id/retrfotit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textRetrofit" />

            <RadioButton
                android:id="@+id/pytorch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textPytorch" />

        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@color/colorButton"
            app:colorText="@string/colorText"
            app:colorButton="@string/colorButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>